force-app/main/default/objects/TSGCFG__Quote__c/TSGCFG__Quote__c.object-meta.xml
<CustomObject>
    <description>Quotes for Deals</description>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>