force-app/main/default/objects/TSGCFG__Quote__c/fields/EQ_Service_Monthly__c.field-meta.xml
<CustomField>
    <fullName>EQ_Service_Monthly__c</fullName>
    <formula>TSGCFG__Lease_Monthly_Payment__c + TSGCFG__MPSMonthlyServicePayment__c + TSGCFG__PrinterMonthlyServicePayment__c + TSGCFG__ProdMonthlyServicePayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EQ &amp; Service Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>