force-app/main/default/objects/TSGCFG__Quote__c/fields/Excess_Delivery_Fees__c.field-meta.xml
<CustomField>
    <fullName>Excess_Delivery_Fees__c</fullName>
    <label>Excess Delivery Fees</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Code_Text__c</field>
        <operation>equals</operation>
        <value>EXCESSDELIVERY</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>