force-app/main/default/objects/TSGCFG__Quote__c/fields/Lease_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lease_Funding_Amount__c</fullName>
    <formula>TSGCFG__Deal__r.Total_Lease_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Funding for deal (Total Lease Items - Buyouts/Upgrades)</inlineHelpText>
    <label>Lease Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>