force-app/main/default/objects/TSGCFG__Quote__c/fields/MFPTotalMonthlyService__c.field-meta.xml
<CustomField>
    <fullName>MFPTotalMonthlyService__c</fullName>
    <label>MFP Total Monthly Service</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Total_Monthly_Payments__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Name__c</field>
        <operation>contains</operation>
        <value>CPC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>MFP</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>