force-app/main/default/objects/TSGCFG__Quote__c/fields/MM_Annual_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>MM_Annual_Maintenance__c</fullName>
    <description>Total amount of Annual Maintenance for mail machine order</description>
    <inlineHelpText>Total amount of Annual Maintenance for mail machine order</inlineHelpText>
    <label>MM Annual Maintenance</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>Annual Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>