force-app/main/default/objects/TSGCFG__Quote__c/fields/MM_Hardware_Revenue__c.field-meta.xml
<CustomField>
    <fullName>MM_Hardware_Revenue__c</fullName>
    <description>Mail Machine Hardware and Accessory Revenue Only for deal</description>
    <inlineHelpText>Mail Machine Hardware and Accessory Revenue Only for deal</inlineHelpText>
    <label>MM Hardware Revenue</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>Mail Machine</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>