force-app/main/default/objects/TSGCFG__Quote__c/fields/MM_Monthly_Services__c.field-meta.xml
<CustomField>
    <fullName>MM_Monthly_Services__c</fullName>
    <description>Total of monthly subscription services for mail machine deal</description>
    <inlineHelpText>Total of monthly subscription services for mail machine deal</inlineHelpText>
    <label>MM Monthly Services</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>Mail Machine Meter, Mail Machine Software</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>