force-app/main/default/objects/TSGCFG__Quote__c/fields/Net_Rep_Cost__c.field-meta.xml
<CustomField>
    <fullName>Net_Rep_Cost__c</fullName>
    <description>Rep Cost associated with Board Credit Revenue used for GP Calculation.</description>
    <formula>TSGCFG__Total_Rep_Cost__c - (TSGCFG__Total_Lease_Amount__c -  Rep_Board_Credit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rep Cost associated with Board Credit Revenue used for GP Calculation.</inlineHelpText>
    <label>Net Rep Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>