force-app/main/default/objects/TSGCFG__Quote__c/fields/of_MSRP__c.field-meta.xml
<CustomField>
    <fullName>of_MSRP__c</fullName>
    <formula>TSGCFG__Total_Lease_Amount__c / TSGCFG__Total_MSRP_Updated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>