force-app/main/default/objects/TSGCFG__Quote__c/fields/OLDNetSaleRevenue__c.field-meta.xml
<CustomField>
    <fullName>OLDNetSaleRevenue__c</fullName>
    <description>Total of all line items where Sales Rep Credit box is True</description>
    <inlineHelpText>Total Sale Credit for Sales Rep outside all Soft Costs or non sales credit items.</inlineHelpText>
    <label>Net Sale Revenue OLD</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Rep_Credit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>