force-app/main/default/objects/TSGCFG__Quote__c/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <label>Professional Services</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Type__c</field>
        <operation>equals</operation>
        <value>Professional Service</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>Professional Service</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>