force-app/main/default/objects/TSGCFG__Quote__c/fields/Rep_Board_Credit__c.field-meta.xml
<CustomField>
    <fullName>Rep_Board_Credit__c</fullName>
    <description>Total of all Standard Hardware/Accessory Sale Items for rep quota/commission credit</description>
    <inlineHelpText>Total of all Standard Hardware/Accessory Sale Items for rep quota/commission credit</inlineHelpText>
    <label>Rep Board Credit</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Type__c</field>
        <operation>equals</operation>
        <value>Model, Accessory</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>