force-app/main/default/objects/TSGCFG__Quote__c/fields/Total_BW_Volume_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Total_BW_Volume_Monthly__c</fullName>
    <formula>TSGCFG__MPSTotalMonoVolume__c + TSGCFG__PrinterTotalMonoVolume__c + TSGCFG__ProdTotalMonoVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of MFP, Printer and Production BW Volume</inlineHelpText>
    <label>Total BW Volume Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>