force-app/main/default/objects/TSGCFG__Quote__c/fields/Total_Lease_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Total_Lease_Buyout__c</fullName>
    <description>Total Amount of Lease Buyout/Upgrades as designated by the Lease Buyout Product Type Misc Items in Configurator</description>
    <inlineHelpText>Total Amount of Lease Buyout/Upgrades as designated by the Lease Buyout Product Type Misc Items in Configurator</inlineHelpText>
    <label>Total Lease Buyout</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.TSGCFG__Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Product_Type__c</field>
        <operation>equals</operation>
        <value>Lease Buyout</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>