force-app/main/default/objects/TSGCFG__Quote__c/fields/Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR__c</fullName>
    <description>MRR * Term</description>
    <formula>TSGCFG__Total_VOIP_MRR__c +  TSGCFG__Lease_Monthly_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(MRR * Term)</inlineHelpText>
    <label>Total MRR*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>