force-app/main/default/objects/TSGCFG__Quote__c/fields/Total_Rep_Flat_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_Rep_Flat_Comp__c</fullName>
    <inlineHelpText>Total Standard Flat Commission from all quoted items where purchase type is &quot;Monthly&quot;</inlineHelpText>
    <label>Total Rep Flat Comp</label>
    <summarizedField>TSGCFG__Quote_Line_Items__c.Total_Flat_Comp_BT__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote_Line_Items__c.TSGCFG__Total_Quantity__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote_Line_Items__c.TSGCFG__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>