force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__All_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__All_Pricebook__c</fullName>
    <inlineHelpText>Quote and All Configuration Pricebook</inlineHelpText>
    <label>All Pricebook</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>NJPA</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Large Quantity</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>AEPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>