force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__B_W_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__B_W_CPC__c</fullName>
    <description>Non-Production Black and White cost per copy  calculated to offer a blended rate for multiple different values.</description>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCLineItems__c &gt; 0,
    TSGCFG__SumofCPCBW__c/  TSGCFG__TotalCPCLineItems__c,
    IF(ABS(TSGCFG__TotalBWVolume__c - TSGCFG__Total_Volume_Includes_B_W__c )&lt;&gt;0, TSGCFG__TotalBWMonthlyCost__c / ABS(TSGCFG__TotalBWVolume__c - TSGCFG__Total_Volume_Includes_B_W__c ),
        IF(TSGCFG__TotalCPCLineItems__c &gt; 0,  TSGCFG__SumofCPCBW__c/  TSGCFG__TotalCPCLineItems__c , 0)
       )
   )



/*NOT IN USE 
 IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCLineItems__c &gt; 0,
    TSGCFG__SumofCPCBW__c/  TSGCFG__TotalCPCLineItems__c,
    IF(TSGCFG__TotalBWVolume__c&lt;&gt;0, (TSGCFG__TotalBWMonthlyCost__c + TSGCFG__TotalBWMonthlyCostVolumeIncludes__c) / TSGCFG__TotalBWVolume__c,
        IF(TSGCFG__TotalCPCLineItems__c &gt; 0,  TSGCFG__SumofCPCBW__c/  TSGCFG__TotalCPCLineItems__c , 0)
       )
   )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Black and White cost per copy  calculated to offer a blended rate for multiple different values.</inlineHelpText>
    <label>B&amp;W CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>