force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__B_W_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__B_W_Overage_Rate__c</fullName>
    <description>Non Production Calculated Overage Rate to allow for multiple services</description>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCLineItems__c &gt; 0 ,
     TSGCFG__SumofCPCOverageBW__c/  TSGCFG__TotalCPCLineItems__c,
     IF(TSGCFG__TotalBWVolume__c&lt;&gt; 0,  TSGCFG__TotalBWOveragePrice__c   /  TSGCFG__TotalBWVolume__c,
	 If(TSGCFG__TotalCPCLineItems__c &gt; 0, TSGCFG__SumofCPCOverageBW__c/ TSGCFG__TotalCPCLineItems__c, 0)))

/* Below code is old and not in use */
/* IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCLineItems__c &gt; 0 ,
     TSGCFG__SumofCPCOverageBW__c/  TSGCFG__TotalCPCLineItems__c,
     IF(TSGCFG__TotalBWVolume__c&lt;&gt; 0,  (TSGCFG__TotalBWOveragePrice__c+TSGCFG__TotalBWOveragePriceVolumeIncludes__c)   /  TSGCFG__TotalBWVolume__c,
	 If(TSGCFG__TotalCPCLineItems__c &gt; 0, TSGCFG__SumofCPCOverageBW__c/ TSGCFG__TotalCPCLineItems__c, 0)))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>B&amp;W CPC Overage rate</inlineHelpText>
    <label>B&amp;W Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>