force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Buy_Out__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Buy_Out__c</fullName>
    <description>Credit for Customer Trade-In</description>
    <inlineHelpText>Credit for Customer Trade-In</inlineHelpText>
    <label>Buy-Out $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>