force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Cloned_Quote__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Cloned_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned Quote</label>
    <referenceTo>TSGCFG__Quote__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>ClonedQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>