force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Co_Term__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Co_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Co-Terminous&quot; lease/addendum</description>
    <inlineHelpText>&quot;Co-Terminous&quot; lease/addendum</inlineHelpText>
    <label>Co-Term</label>
    <type>Checkbox</type>
</CustomField>