force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Color_1_Allocation__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Color_1_Allocation__c</fullName>
    <label>Color 1 Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>