force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Color_2_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Color_2_Overage_Rate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__Total_CPC_Color_2_Line_Items__c &gt; 0 , 
TSGCFG__Sum_of_CPC_Overage_Color_2__c/ TSGCFG__Total_CPC_Color_2_Line_Items__c, 
IF(TSGCFG__Total_Color_Volume_2__c&lt;&gt;0,TSGCFG__Total_Color_2_Overage_Cost__c / TSGCFG__Total_Color_Volume_2__c, 
If(TSGCFG__Total_CPC_Color_2_Line_Items__c &gt; 0, TSGCFG__Sum_of_CPC_Overage_Color_2__c / TSGCFG__Total_CPC_Color_2_Line_Items__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color 2 Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>