force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Color_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Color_CPC__c</fullName>
    <description>Non Production This is calculated to offer a blended rate for multiple machines.</description>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCColorLineItems__c &gt; 0 ,
     TSGCFG__SumofCPCColor__c/  TSGCFG__TotalCPCColorLineItems__c, 
     IF(ABS( TSGCFG__TotalColorVolume__c - TSGCFG__Total_Volume_Includes_Color__c)&lt;&gt;0, TSGCFG__TotalColorMonthlyCost__c / ABS( TSGCFG__TotalColorVolume__c - TSGCFG__Total_Volume_Includes_Color__c) ,
         IF( TSGCFG__TotalCPCColorLineItems__c &gt; 0, TSGCFG__SumofCPCColor__c/  TSGCFG__TotalCPCColorLineItems__c, 0
           )
       )
   )


/* OLD NOT in USE 
IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCColorLineItems__c &gt; 0 ,
     TSGCFG__SumofCPCColor__c/  TSGCFG__TotalCPCColorLineItems__c, 
     IF(TSGCFG__TotalColorVolume__c&lt;&gt;0, (TSGCFG__TotalColorMonthlyCost__c + TSGCFG__TotalColorMonthlyCostVolumeIncludes__c) /  TSGCFG__TotalColorVolume__c,
         IF( TSGCFG__TotalCPCColorLineItems__c &gt; 0, TSGCFG__SumofCPCColor__c/  TSGCFG__TotalCPCColorLineItems__c, 0
           )
       )
   )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Cost Per Copy for Color</inlineHelpText>
    <label>Color CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>