force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Color_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Color_Overage_Rate__c</fullName>
    <description>Non Production Calculated Overage Rate based to allow for multiple services</description>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__TotalCPCColorLineItems__c&gt; 0 ,
     TSGCFG__SumofCPCOverageColor__c/  TSGCFG__TotalCPCColorLineItems__c, 
    IF(TSGCFG__TotalColorVolume__c&lt;&gt;0,  (TSGCFG__TotalColorOveragePrice__c + TSGCFG__TotalColorOveragePriceVolumeIncludes__c)/  TSGCFG__TotalColorVolume__c,
	If(TSGCFG__TotalCPCColorLineItems__c &gt; 0, TSGCFG__SumofCPCOverageColor__c/ TSGCFG__TotalCPCColorLineItems__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Color CPC overage rate</inlineHelpText>
    <label>Color Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>