force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Consolidation_Method__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Consolidation_Method__c</fullName>
    <description>Average = Sum all rates and divide by number of times used
Volume Weighted = Volume x Rate for each machine / Total Volume</description>
    <label>Consolidation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Volume Weighted</fullName>
                <default>true</default>
                <label>Volume Weighted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>