force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__CPC_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__CPC_Consolidation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPC Consolidation</label>
    <referenceTo>TSGCFG__CPC_Consolidation__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>