force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__CPC_Overridden__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__CPC_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, CPC Rates have been overridden on one or more CPC Service QLI</inlineHelpText>
    <label>CPC Overridden</label>
    <type>Checkbox</type>
</CustomField>