force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__CPCOverrideCount__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__CPCOverrideCount__c</fullName>
    <description>How many CPC Rates were Overridden?</description>
    <inlineHelpText>How many CPC Rates were Overridden?</inlineHelpText>
    <label>CPC Override Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>