force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Deal__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>TSGADX__Deal__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>