force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Deal_Owner__c</fullName>
    <formula>TSGCFG__Deal__r.Owner:User.TSGADX__Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Owner</label>
    <type>Text</type>
</CustomField>