force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Deal_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Deal_Sales_Stage__c</fullName>
    <formula>TEXT( TSGCFG__Deal__r.TSGADX__Sales_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Sales Stage</label>
    <type>Text</type>
</CustomField>