force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__EquipmentLeaseSubtotal__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__EquipmentLeaseSubtotal__c</fullName>
    <description>= SUM(QLI.Total Price) where Lease = true</description>
    <inlineHelpText>This is the total of all quote line items which are leased (Prior to the discount)</inlineHelpText>
    <label>Equipment Lease Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>