force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Expand_All_Configurations__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Expand_All_Configurations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expand All Configurations</label>
    <type>Checkbox</type>
</CustomField>