force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__FinalCPCOverageBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__FinalCPCOverageBW__c</fullName>
    <description>Sum of CPC Overage B/W - Non-Production</description>
    <inlineHelpText>= Sum of CPC Overage B/W- Non-Production</inlineHelpText>
    <label>Final CPC Overage (B/W)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>