force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Fixed_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Fixed_Rate_Multiplier__c</fullName>
    <label>Fixed Rate Multiplier</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>