force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Key_Features__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Key_Features__c</fullName>
    <label>Key Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>