force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Last_Refresh_Price_On__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Last_Refresh_Price_On__c</fullName>
    <inlineHelpText>Shows date/time when Quote is last time refresh</inlineHelpText>
    <label>Last Price Refresh</label>
    <type>DateTime</type>
</CustomField>