force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Lease_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Lease_Monthly_Payment__c</fullName>
    <description>Monthly Leasing Payment based on (Total Hardware + Software) * Leasing Rate</description>
    <formula>IF (BLANKVALUE(TSGCFG__Leasing_Rate_Overrride__c,0)=0, 
   TSGCFG__Total_Equipment_Lease__c *  TSGCFG__Leasing_Rate_Factor__c, 
   TSGCFG__Total_Equipment_Lease__c *  TSGCFG__Leasing_Rate_Overrride__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Leasing Payment based on (Total Hardware + Software) * Leasing Rate</inlineHelpText>
    <label>Equipment Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>