force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Leasing_Company__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Leasing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Leasing Company</description>
    <inlineHelpText>Select Leasing Company</inlineHelpText>
    <label>Leasing Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Leasing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>