force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Leasing_Rate_Cost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Leasing_Rate_Cost__c</fullName>
    <label>Leasing Rate Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>