force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Leasing_Rate_Factor__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Leasing_Rate_Factor__c</fullName>
    <description>Leasing Rate Factor</description>
    <inlineHelpText>Leasing Rate Factor</inlineHelpText>
    <label>Leasing Rate Factor</label>
    <precision>10</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>