force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Leasing_Rate_Overrride__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Leasing_Rate_Overrride__c</fullName>
    <description>Enter Leasing factor to Override the standard Leasing Rate Factor</description>
    <inlineHelpText>Enter Leasing factor to Override the standard Leasing Rate Factor</inlineHelpText>
    <label>Leasing Rate Override</label>
    <precision>10</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>